# btp-genai-starter-kit

./: .gitattributes  .gitignore  README.md  REUSE.toml  cleanup_code.sh  destroy.sh  run.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug.md  ---feature.md
.github/workflows/: llm-autoupdate.yml  update_packages.yaml
.reuse/: dep5
config/: Dockerfile  requirements.in  requirements.txt
config/auto-updates/: run.sh
config/auto-updates/step01_setup_infra/: main.tf  outputs.tf  provider.tf  setup.tfvars  variables.tf
config/auto-updates/step01_setup_infra/modules/ai/: ai.tf  ai_outputs.tf
config/auto-updates/step02_detect_models/: main.py  pyproject.toml
config/secrets/: btp_ai_setup.tfvars  btp_credentials.tfvars
docs/rag_sources/tf_provider_btp/: index.md
scripts/package/: setup.cfg
scripts/step01_setup_infra/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
scripts/step01_setup_infra/modules/ai/: ai.tf  ai_outputs.tf  ai_variable_target_ai_core_model.tf  ai_variables.tf
scripts/step01_setup_infra/modules/hana-cloud/: hana_cloud.tf  hana_cloud_outputs.tf  hana_cloud_variables.tf
scripts/step02_deploy_models/: README.md  main.py  pyproject.toml
scripts/step02_fetch_metadata/: step02_fetch_metadata.py
scripts/step03/: README.md
scripts/step03/example1/: README.md  ingest_data.py  rag_on_sap_btp.py
scripts/step03_explore_examples/: README.md
scripts/step03_explore_examples/01_naive_rag/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/02_advanced_rag/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/02_advanced_rag/helpers/: __init__.py  config.py  factory.py
scripts/step03_explore_examples/02_advanced_rag/src/: __init__.py  benchmark.py  hana_self_query.py  ingest.py  rag_fusion.py  rewrite_retrieve_read.py  self_query.py  split_data.py
scripts/step03_explore_examples/03_vision_model/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/03_vision_model/modules/: process.py
scripts/step03_explore_examples/04_rag_on_mixed_data/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/05_multi_modal_rag/: README.md  install_prerequisites.sh  main.py  pyproject.toml
scripts/step03_explore_examples/06_rag_benchmarking/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/06_rag_benchmarking/helpers/: __init__.py  config.py  factory.py
scripts/step03_explore_examples/06_rag_benchmarking/rag_benchmark_utils/: common_utils.py
scripts/step03_explore_examples/06_rag_benchmarking/src/: __init__.py  evaluate_with_golden_testset.py  evaluate_with_ragas.py  evaluate_without_golden_testset.py  generate_golden_testset.py  ingest.py
scripts/step03_explore_examples/example01/: README.md  ingest_data.py  rag_on_sap_btp.py
scripts/step03_explore_examples/example03/: README.md  image_processing.py
scripts/step03_explore_examples/example03/modules/: load.py  process.py
scripts/step03_explore_examples/utils/: pyproject.toml
scripts/step03_explore_examples/utils/utils/: __init__.py  env.py  fs.py  hana.py  http.py  ingest_docs.py  rag.py
