[tool.poetry]
name = "ai-model-deployment"
version = "0.1.0"
description = "Deployment of AI models"
authors = ["romaniam"]
packages = [{ include = "library" }]

[tool.poetry.dependencies]
python = "^3.12.3"
requests = ">=2.32.5"
python-dotenv = "^1.0.1"
urllib3 = ">=2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
