[tool.poetry]
name = "simple-rag"
version = "0.1.0"
description = "Simple RAG implementation using HANA Cloud Vector Store"
authors = ["EvgeniiSkrebtcov"]
readme = "README.md"
packages = [{ include = "library" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = ">=4.12.4"
gitpython = "^3.1.43"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-core = ">=1.2.6"
langchain-google-genai = ">=4.1.2"
langchain-openai = ">=0.1.15"
python = ">=3.13, <4.0"
python-dotenv = "^1.0.1"
utils = { path = "../utils", develop = true }
urllib3 = ">=2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
