[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = "Demonstration of different Advanced RAG techniques"
authors = ["SeriousSem"]
readme = "README.md"
packages = [{ include = "src" }, { include = "helpers" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = "^1.11.1"
gitpython = "^3.1.43"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-google-genai = "^1.0.7"
langchain-openai = "0.1.8"
lark = "^1.2.2"
llama-index = "^0.12.28"
llama-index-embeddings-langchain = "*"
openai = "*"
pymupdf = "^1.24.7"
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
utils = { path = "../utils", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"