[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = "Demonstration of different Advanced RAG techniques"
authors = ["SeriousSem"]
readme = "README.md"
packages = [{ include = "src" }, { include = "helpers" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = "*"
gitpython = "^3.1.43"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-core = ">=1.2.6"
langchain-google-genai = ">=4.1.2"
langchain-openai = ">=0.1.15"
lark = "^1.2.2"
llama-index = "0.13.6"
llama-index-core = "0.13.6"
llama-index-embeddings-langchain = "*"
openai = "*"
pymupdf = "^1.26.7"
pypdf = ">= 6.0.0"
python = ">=3.13, <4.0"
python-dotenv = "^1.0.1"
utils = { path = "../utils", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
