[tool.poetry]
name = "vision-model"
version = "0.1.0"
description = "Sample is showing how to use vision models via plain http calls"
authors = ["romaniam"]
readme = "README.md"
packages = [{ include = "library" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.8.2"
requests = "^2.32.4"
langchain-core = "^0.2.43"
utils = { path = "../utils", develop = true }
generative-ai-hub-sdk = "^1.11.1"
langchain-google-genai = "^1.0.7"
langchain-openai = "^0.1.16"
langchain-aws = "^0.1.11"
langchain-community = "^0.2.19"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
