[tool.poetry]
name = "vision-model"
version = "0.1.0"
description = "Sample is showing how to use vision models via plain http calls"
authors = ["romaniam"]
readme = "README.md"
packages = [{ include = "library" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = ">=4.12.4"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-google-genai = ">=4.1.2"
langchain-openai = ">=0.1.15"
langchain-aws = ">=1.2.0"
langchain-core = ">=1.2.6"
protobuf = "^4.25.8"
pydantic = ">=2.10.6"
python = ">=3.13,<4.0"
requests = ">=2.32.5"
utils = { path = "../utils", develop = true }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
