[tool.poetry]
name = "rag-on-mixed-data"
version = "0.1.0"
description = "Examples showing RAG examples on structured and unstructured data"
authors = ["EvgeniiSkrebtcov"]
readme = "README.md"
packages = [{ include = "library" }]

[tool.poetry.dependencies]
python = ">=3.13"
generative-ai-hub-sdk = "^1.11.1"
langchain-community = "^0.2.6"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
utils = { path = "../utils", develop = true }
langchain-google-genai = "^1.0.7"
langchain-openai = "^0.1.11"
sqlalchemy = "^2.0.31"
sqlalchemy-hana = "^2.2.0"
wikipedia = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
