[tool.poetry]
name = "rag-on-mixed-data"
version = "0.1.0"
description = "Examples showing RAG examples on structured and unstructured data"
authors = ["EvgeniiSkrebtcov"]
readme = "README.md"
packages = [{ include = "library" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = ">=4.12.4"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-google-genai = ">=4.1.2"
langchain-openai = ">=0.1.15"
python = ">=3.13, <4.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
sqlalchemy-hana = "^2.2.0"
utils = { path = "../utils", develop = true }
wikipedia = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
