[tool.poetry]
name = "multi-modal-rag-using-ocr"
version = "0.1.0"
description = "Example showing multi modal rag via OCR to extract text tables and images from PDF"
authors = ["romaniam"]
readme = "README.md"
packages = [{ include = "library" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = ">=4.12.4"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-google-genai = ">=4.1.2"
langchain-openai = ">=0.1.15"
pdfminer-six = "20221105"
pydantic = ">=2.10.6"
python = ">=3.13, <3.15"
python-dotenv = "^1.0.1"
requests = ">=2.32.5"
torch = ">=2.8.0"
unstructured = {extras = ["pdf"], version = "^0.18.11"}
utils = { path = "../utils", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
