[tool.poetry]
name = "rag-benchmarking"
version = "0.1.0"
description = "Demonstration of RAG Benchmarking techniques"
authors = ["sreanikdk"]
readme = "README.md"
packages = [{ include = "src" }, { include = "helpers" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
generative-ai-hub-sdk = "^1.11.1"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
python-dotenv = "^1.0.1"
utils = { path = "../utils", develop = true }
langchain-google-genai = "^1.0.7"
gitpython = "^3.1.43"
openai = "1.34.0"
pydantic = "2.9.2"
tabulate = "0.9.0"
ragas = "0.1.20"
nltk = "3.9.1"
rouge-score = "0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"