[tool.poetry]
name = "rag-benchmarking"
version = "0.1.0"
description = "Demonstration of RAG Benchmarking techniques"
authors = ["sreanikdk"]
readme = "README.md"
packages = [{ include = "src" }, { include = "helpers" }]

[tool.poetry.dependencies]
generative-ai-hub-sdk = ">=4.12.4"
gitpython = "^3.1.43"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-core = ">=1.2.6"
langchain-google-genai = ">=4.1.2"
openai = ">=2.0.0"
pydantic = ">=2.10.6"
python = ">=3.13, <4.0"
python-dotenv = "^1.0.1"
ragas = ">=0.4.0"
tabulate = "0.9.0"
urllib3 = "2.6.0"
utils = { path = "../utils", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"