[tool.poetry]
name = "utils"
version = "0.1.4"
description = "Utils for exploring examples"
authors = ["romaniam"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
hdbcli = "^2.21.26"
langchain = "^0.2.6"
python-dotenv = "^1.0.1"
urllib3 = "2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
